--- a/publications.html
+++ b/publications.html
@@ -43,15 +43,22 @@ Christian Igel. Smooth Min-Max Monotonic Networks.
   <em>International Conference on Machine Learning (ICML)</em>, accepted
   </div>
 
-
-
-
-
+  
     <div class=publication>
 Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
     Sporring, Robert Jenssen, and Bulat Ibragimov. Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks.
   <em>International Conference on Machine Learning (ICML)</em>, accepted
-  </div>
+    </div>
+
+    <div class=publication>
+  Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
+MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning
+<em>European Conference
+  on Computer Vision (ECCV)</em>, accepted
+<a href="https://vishalned.github.io/mmearth/ class="sup">project homepage</a>
+    </div>
+
+    
 
 <a name="y24"></a>
 
