--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
 MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning
 <em>European Conference
   on Computer Vision (ECCV)</em>, accepted
-<a href="https://vishalned.github.io/mmearth/ class="sup">project homepage</a>
+<a href="https://vishalned.github.io/mmearth/" class="sup">project homepage</a>
     </div>
 
     
