--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
 
     <div class=publication>
   Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
-MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning
+MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
 <em>European Conference
   on Computer Vision (ECCV)</em>, accepted
 <a href="https://vishalned.github.io/mmearth/" class="sup">project homepage</a>
