--- a/publications.html
+++ b/publications.html
@@ -34,6 +34,12 @@ scholar profile</a>.
   
   
 
+<div class=publication>
+Dustin Wright, Christian Igel, Gabrielle Samue,l and Raghavendra Selvan.
+  Efficiency is Not Enough: A Critical Perspective of
+  Environmentally Sustainable. <em>Communications of the ACM</em>, accepted
+</div>
+
 
 <div class=publication>
        <img src="images/MinMax.png "
@@ -41,7 +47,7 @@ scholar profile</a>.
   alt="[Min-Max architecture]">
 Christian Igel. Smooth Min-Max Monotonic Networks.
   <em>International Conference on Machine Learning (ICML)</em>, accepted
-  </div>
+</div>
 
   
     <div class=publication>
