--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@ scholar profile</a>.
   
 
 <div class=publication>
-Dustin Wright, Christian Igel, Gabrielle Samue,l and Raghavendra Selvan.
+Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
   Efficiency is Not Enough: A Critical Perspective of
   Environmentally Sustainable. <em>Communications of the ACM</em>, accepted
 </div>
