--- a/publications.html
+++ b/publications.html
@@ -41,20 +41,6 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
 </div>
 
 
-<div class=publication>
-       <img src="images/MinMax.png "
-  align="right" style="margin: 0px 10px 10px 10px" width="250"
-  alt="[Min-Max architecture]">
-Christian Igel. Smooth Min-Max Monotonic Networks.
-  <em>International Conference on Machine Learning (ICML)</em>, accepted
-</div>
-
-  
-    <div class=publication>
-Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
-    Sporring, Robert Jenssen, and Bulat Ibragimov. Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks.
-  <em>International Conference on Machine Learning (ICML)</em>, accepted
-    </div>
 
     <div class=publication>
   Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
@@ -97,6 +83,9 @@ Matthias Freiberger, Peter Kun, Christian Igel, Anders Sundnes Løvlie,
   <em>Transactions on Machine Learning Research</em>, 2024
   </div>
 
+
+
+  
   <div class=publication>
 Bjørn Leth Møller, Bobby Zhao Sheng Lo, Johan Burisch, Flemming Bendtsen,
 Ida Vind, Bulat Ibragimov, and Christian Igel.
@@ -119,6 +108,21 @@ Architecture Search</a>. <em>IEEE International Conference on
   Acoustics, Speech and Signal Processing (ICASSP)</em>,
 pp. 5660-5664, 2024
 </div>
+
+<div class=publication>
+       <img src="images/MinMax.png "
+  align="right" style="margin: 0px 10px 10px 10px" width="250"
+  alt="[Min-Max architecture]">
+Christian Igel. <a href="https://proceedings.mlr.press/v235/igel24a.html">Smooth Min-Max Monotonic Networks</a>.
+  <em>International Conference on Machine Learning (ICML)</em>, 2024
+</div>
+
+  
+    <div class=publication>
+Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
+    Sporring, Robert Jenssen, and Bulat Ibragimov. <a href="https://proceedings.mlr.press/v235/moller24a.html">Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks</a>.
+  <em>International Conference on Machine Learning (ICML)</em>, 2024
+    </div>
 
   <div class=publication>
   Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
