--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ vector machines,SVM,SVMs,machine learning">
   <a href="https://di.ku.dk/english/research/machine-learning">ML Section</a>
 </div>
 <div id="inner-page">
-<p><img src="images/CSUPicture.jpeg" style="height: 180px;
+<p><img src="images/ICML-2122-clip-long.jpg"
+<!--  CSUPicture.jpeg -->
+  style="height: 180px;
 margin: 0px 00px 100px 0px; border-radius: 10px;" align="right" alt="Image of Me"> </p>
 <h1>Christian Igel</h1>
 Professor, Dr. habil.
@@ -110,11 +112,28 @@ and applications of machine learning that help achieve the sustainable developme
 <h3>Selected Recent Publications</h3>
 
 
+
 Please click <a href="publications.html">here</a> for a  <a
 href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
 scholar profile</a>.
 <p>
+<div class=publication>
+       <img src="images/MinMax.png "
+  align="right" style="margin: 0px 10px 10px 10px" width="250"
+  alt="[Min-Max architecture]">
+Christian Igel. <a href="https://proceedings.mlr.press/v235/igel24a.html">Smooth Min-Max Monotonic Networks</a>.
+  <em>International Conference on Machine Learning (ICML)</em>, 2024
+</div>
+
+  
+    <div class=publication>
+Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
+    Sporring, Robert Jenssen, and Bulat Ibragimov. <a href="https://proceedings.mlr.press/v235/moller24a.html">Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks</a>.
+  <em>International Conference on Machine Learning (ICML)</em>, 2024
+    </div>
+
+
 <div class=publication>Florian Reiner, Martin Brandt, Xiaoye Tong, David Skole, Ankit Kariryaa, Philippe Ciais,
 Andrew Davies, Pierre Hiernaux, Jerome Chave, Maurice Mugabowindekwe, Christian Igel,
 Stefan Oehmcke, Fabian Gieseke,  Sizhuo Li, Siyu Liu, Sassan S. Saatchi, Peter Boucher,
