--- a/publications.html
+++ b/publications.html
@@ -32,8 +32,14 @@ scholar profile</a>.
   
 
   
-  
+<div class=publication>
+Dustin Wright, Christian Igel, and Raghavendra Selvan.
+ BMRS: Bayesian Model Reduction for Structured Pruning. <em>Advances
+  in Neural Processing Systems (NeurIPS)</em>, accepted<!--  (spotlight) -->
+</div>
 
+
+  
 <div class=publication>
 Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
   Efficiency is Not Enough: A Critical Perspective of
@@ -74,6 +80,12 @@ MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learn
 
   
 
+<div class=publication>
+  Naomi Crump, Bo Markussen, Stefan Oehmcke, Christian Igel, Hans
+  Skov-Petersen, and Patrik Karlsson Nyed.
+    Modelling Residential Fire Vulnerability of Denmark.
+    <em>Fire Technology</em>, 2024
+  </div>
   
 
 <div class=publication>
