updated CVPR link

--- a/publications.html
+++ b/publications.html
@@ -138,7 +138,7 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
 
   <div class=publication>
   Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
-  Christian Igel, and Serge Belongie. <a href=https://langnico.github.io/fine-grained-osr/">From Coarse to Fine-Grained Open-Set
+  Christian Igel, and Serge Belongie. <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Lang_From_Coarse_to_Fine-Grained_Open-Set_Recognition_CVPR_2024_paper.pdf">From Coarse to Fine-Grained Open-Set
   Recognition</a>. <em>Computer Vision and
     Pattern Recognition (CVPR)</em>, 2024</div>
     
