--- a/publications.html
+++ b/publications.html
@@ -48,14 +48,6 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
 
 
 
-    <div class=publication>
-  Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
-MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
-<em>European Conference
-  on Computer Vision (ECCV)</em>, accepted
-<a href="https://vishalned.github.io/mmearth/" class="sup">project homepage</a>
-    </div>
-
     
 
 <a name="y24"></a>
@@ -141,6 +133,14 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
   Christian Igel, and Serge Belongie. <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Lang_From_Coarse_to_Fine-Grained_Open-Set_Recognition_CVPR_2024_paper.pdf">From Coarse to Fine-Grained Open-Set
   Recognition</a>. <em>Computer Vision and
     Pattern Recognition (CVPR)</em>, 2024</div>
+
+    <div class=publication>
+  Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
+MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
+<em>European Conference
+  on Computer Vision (ECCV)</em>, 2024
+<a href="https://vishalned.github.io/mmearth/" class="sup">project homepage</a>
+    </div>
     
 <a name="y23"></a>
 
