--- a/publications.html
+++ b/publications.html
@@ -27,10 +27,30 @@ scholar profile</a>.
 <a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
-  <h4>Coming soon</h4><a name="top"></a>
+<div class=publication>
+Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
+  Christian Igel.
+    Familiarity-Based Open-Set Recognition Under Adversarial Attacks.
+  <em>Northern Lights Deep Learning Conference</em>, PMLR, accepted
+</div>
 
-  
 
+<h4>Coming soon</h4><a name="top"></a>
+<div class=publication>
+  Bjørn Leth Møller, Sepideh Amiri, Christian Igel, Kristoffer Knutsen
+  Wickstrøm, Robert Jenssen, Matthias Keicher, Mohammad Farid
+  Azampour, Nassir Navab, and Bulat Ibragimov.  NEMt: Fast Targeted
+  Explanations for Medical Image Models via Neural Explanation Masks.
+  <em>Northern Lights Deep Learning Conference</em>, PMLR, accepted
+</div>
+
+
+  <div class=publication>
+Raghavendra Selvan, Bob Pepin, Christian Igel, Gabrielle Samuel, and
+    Erik B Dam.
+    PePR: Performance Per Resource Unit as a Metric to Promote Small-scale Deep Learning.
+  <em>Northern Lights Deep Learning Conference</em>, PMLR, accepted
+</div>
   
 <div class=publication>
 Dustin Wright, Christian Igel, and Raghavendra Selvan.
