--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,17 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
 <a name="y24"></a>
 
 <h4>2024</h4>
+<div class=publication>
+Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
+  Ciais abd Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
+  Compton J. Tucker, and  Christian Igel.
+  <a
+    href="https://www.nature.com/articles/s44287-024-00116-8">High-resolution sensors and deep learning models for tree resource monitoring</a>.
+  <em>Nature Reviews Electrical Engineering</em>, 2024
+  </div>
+
+
+
   <div class=publication>
      <a href="https://www.nature.com/articles/s43247-024-01278-x"><img
     src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fs43247-024-01278-x/MediaObjects/43247_2024_1278_Fig1_HTML.png?as=webp"
