--- a/publications.html
+++ b/publications.html
@@ -30,33 +30,11 @@ scholar profile</a>.
   <h4>Coming soon</h4><a name="top"></a>
 
 <div class=publication>
-Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
-  Christian Igel.
-    Familiarity-Based Open-Set Recognition Under Adversarial Attacks.
-  <em>Northern Lights Deep Learning Conference</em>, PMLR, accepted
-</div>
-
-<div class=publication>
-  Bjørn Leth Møller, Sepideh Amiri, Christian Igel, Kristoffer Knutsen
-  Wickstrøm, Robert Jenssen, Matthias Keicher, Mohammad Farid
-  Azampour, Nassir Navab, and Bulat Ibragimov.  NEMt: Fast Targeted
-  Explanations for Medical Image Models via Neural Explanation Masks.
-  <em>Northern Lights Deep Learning Conference</em>, PMLR, accepted
+Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendtsen, Johan Burisch, and Bulat Ibragimov. Improving the Real-time Classification of Disease Severity in Ulcerative Colitis: Artificial Intelligence as the Trigger for a Second Opinion. 
+<em>American Journal of Gastroenterology</em>, accepted
 </div>
 
 
-  <div class=publication>
-Raghavendra Selvan, Bob Pepin, Christian Igel, Gabrielle Samuel, and
-    Erik B Dam.
-    PePR: Performance Per Resource Unit as a Metric to Promote Small-scale Deep Learning.
-  <em>Northern Lights Deep Learning Conference</em>, PMLR, accepted
-</div>
-  
-<div class=publication>
-Dustin Wright, Christian Igel, and Raghavendra Selvan.
- BMRS: Bayesian Model Reduction for Structured Pruning. <em>Advances
-  in Neural Processing Systems (NeurIPS)</em>, accepted<!--  (spotlight) -->
-</div>
 
 
   
@@ -66,6 +44,32 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
   Environmentally Sustainable. <em>Communications of the ACM</em>, accepted
 </div>
 
+
+<a name="y25"></a>
+
+<div class=publication>
+Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
+  Christian Igel.
+    Familiarity-Based Open-Set Recognition Under Adversarial Attacks.
+  <em>Northern Lights Deep Learning Conference</em>, 2025
+</div>
+
+<div class=publication>
+  Bjørn Leth Møller, Sepideh Amiri, Christian Igel, Kristoffer Knutsen
+  Wickstrøm, Robert Jenssen, Matthias Keicher, Mohammad Farid
+  Azampour, Nassir Navab, and Bulat Ibragimov.  NEMt: Fast Targeted
+  Explanations for Medical Image Models via Neural Explanation Masks.
+  <em>Northern Lights Deep Learning Conference</em>, 2025
+</div>
+
+
+  <div class=publication>
+Raghavendra Selvan, Bob Pepin, Christian Igel, Gabrielle Samuel, and
+    Erik B Dam.
+    PePR: Performance Per Resource Unit as a Metric to Promote Small-scale Deep Learning.
+  <em>Northern Lights Deep Learning Conference</em>, 2025
+</div>
+  
 
 
     
@@ -134,7 +138,11 @@ Ida Vind, Bulat Ibragimov, and Christian Igel.
   alt="[biomass from LiDAR]"></a>
   Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas Nord-Larsen, Katerina Trepekli, Fabian Gieseke, and Christian Igel. <a href="https://doi.org/10.1016/j.rse.2023.113968">Deep point cloud regression for above-ground forest biomass estimation from airborne LiDAR</a>.
 <em>Remote Sensing of Environment</em> <vol>302</vol>, 2024
-</div>
+  </div>
+
+
+
+  
 
 <div class=publication>
 Pedram Bakhtiarifard, Christian Igel, and Raghavendra Selvan.
@@ -172,7 +180,13 @@ MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learn
   on Computer Vision (ECCV)</em>, 2024
 <a href="https://vishalned.github.io/mmearth/" class="sup">project homepage</a>
     </div>
-    
+
+    <div class=publication>
+Dustin Wright, Christian Igel, and Raghavendra Selvan.
+ <a href="https://openreview.net/forum?id=ktpG37Dzh5 ">BMRS: Bayesian Model Reduction for Structured Pruning</a>. <em>Advances
+  in Neural Processing Systems (NeurIPS)</em>, 2024
+</div>
+
 <a name="y23"></a>
 
 <h4>2023</h4>
