--- a/publications.html
+++ b/publications.html
@@ -29,10 +29,6 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
 
-<div class=publication>
-Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendtsen, Johan Burisch, and Bulat Ibragimov. Improving the Real-time Classification of Disease Severity in Ulcerative Colitis: Artificial Intelligence as the Trigger for a Second Opinion. 
-<em>American Journal of Gastroenterology</em>, accepted
-</div>
 
 
 <div class=publication>
@@ -45,6 +41,21 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
 <a name="y25"></a>
 
 <h4>2025</h4>
+<div class=publication>
+Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
+  Ciais abd Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
+  Compton J. Tucker, and  Christian Igel.
+  <a
+    href="https://www.nature.com/articles/s44287-024-00116-8">High-resolution sensors and deep learning models for tree resource monitoring</a>.
+  <em>Nature Reviews Electrical Engineering</em>, 2025
+</div>
+
+<div class=publication>
+Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendtsen, Johan Burisch, and Bulat Ibragimov. Improving the Real-time Classification of Disease Severity in Ulcerative Colitis: Artificial Intelligence as the Trigger for a Second Opinion. 
+<em>American Journal of Gastroenterology</em>, 2025
+</div>
+
+
 <div class=publication>
 Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
   Christian Igel.
@@ -63,7 +74,7 @@ Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
 
   <div class=publication>
 Raghavendra Selvan, Bob Pepin, Christian Igel, Gabrielle Samuel, and
-    Erik B Dam.
+    Erik B. Dam.
     PePR: Performance Per Resource Unit as a Metric to Promote Small-scale Deep Learning.
   <em>Northern Lights Deep Learning Conference</em>, 2025
 </div>
@@ -73,14 +84,7 @@ Raghavendra Selvan, Bob Pepin, Christian Igel, Gabrielle Samuel, and
 <a name="y24"></a>
 
 <h4>2024</h4>
-<div class=publication>
-Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
-  Ciais abd Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
-  Compton J. Tucker, and  Christian Igel.
-  <a
-    href="https://www.nature.com/articles/s44287-024-00116-8">High-resolution sensors and deep learning models for tree resource monitoring</a>.
-  <em>Nature Reviews Electrical Engineering</em>, 2024
-  </div>
+
 
 
 
@@ -156,18 +160,18 @@ Christian Igel. <a href="https://proceedings.mlr.press/v235/igel24a.html">Smooth
   <em>International Conference on Machine Learning (ICML)</em>, 2024
 </div>
 
-  
-    <div class=publication>
-Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
-    Sporring, Robert Jenssen, and Bulat Ibragimov. <a href="https://proceedings.mlr.press/v235/moller24a.html">Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks</a>.
-  <em>International Conference on Machine Learning (ICML)</em>, 2024
-    </div>
-
   <div class=publication>
   Nico Lang, Vésteinn Snæbjarnarson, Elijah Cole, Oisin Mac Aodha,
   Christian Igel, and Serge Belongie. <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Lang_From_Coarse_to_Fine-Grained_Open-Set_Recognition_CVPR_2024_paper.pdf">From Coarse to Fine-Grained Open-Set
   Recognition</a>. <em>Computer Vision and
     Pattern Recognition (CVPR)</em>, 2024</div>
+
+    
+    <div class=publication>
+Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
+    Sporring, Robert Jenssen, and Bulat Ibragimov. <a href="https://proceedings.mlr.press/v235/moller24a.html">Finding NEM-U: Explaining unsupervised representation learning through neural network generated explanation masks</a>.
+  <em>International Conference on Machine Learning (ICML)</em>, 2024
+    </div>
 
     <div class=publication>
   Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
