--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,14 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
   Environmentally Sustainable. <em>Communications of the ACM</em>, accepted
 </div>
 
+<div class=publication>
+Gustav Mark-Hansen,
+Frederik Henriques Altmann,
+Christian Igel,
+Ankit Kariryaa. Demosaicing and Neural Network Based Image Reconstruction in the Presence of Noise. <em>Scandinavian Conference on Image Analysis (SCIA)</em>, accepted
+</div>
+
+
 
 <a name="y25"></a>
 
@@ -47,7 +55,7 @@ Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
   Compton J. Tucker, and  Christian Igel.
   <a
     href="https://www.nature.com/articles/s44287-024-00116-8">High-resolution sensors and deep learning models for tree resource monitoring</a>.
-  <em>Nature Reviews Electrical Engineering</em>, 2025
+  <em>Nature Reviews Electrical Engineering</em> <vol>2</vol>:13-26, 2025
 </div>
 
 <div class=publication>
@@ -60,7 +68,8 @@ Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendts
 Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
   Christian Igel.
     Familiarity-Based Open-Set Recognition Under Adversarial Attacks.
-  <em>Northern Lights Deep Learning Conference</em>, 2025
+  <em>Northern Lights Deep Learning Conference</em>, Proceedings of Machine Learning
+Research <vol>265</vol>:58-65, 2025
 </div>
 
 <div class=publication>
@@ -68,7 +77,8 @@ Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
   Wickstrøm, Robert Jenssen, Matthias Keicher, Mohammad Farid
   Azampour, Nassir Navab, and Bulat Ibragimov.  NEMt: Fast Targeted
   Explanations for Medical Image Models via Neural Explanation Masks.
-  <em>Northern Lights Deep Learning Conference</em>, 2025
+  <em>Northern Lights Deep Learning Conference</em>, Proceedings of Machine Learning
+Research <vol>265</vol>:184-192, 2025
 </div>
 
 
@@ -76,7 +86,8 @@ Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
 Raghavendra Selvan, Bob Pepin, Christian Igel, Gabrielle Samuel, and
     Erik B. Dam.
     PePR: Performance Per Resource Unit as a Metric to Promote Small-scale Deep Learning.
-  <em>Northern Lights Deep Learning Conference</em>, 2025
+  <em>Northern Lights Deep Learning Conference</em>, Proceedings of Machine Learning
+Research <vol>265</vol>:220-229, 2025
 </div>
   
 
@@ -174,7 +185,7 @@ Bjørn Leth Møller, Christian Igel, Kristoffer Knutsen Wickstrøm, Jon
     </div>
 
     <div class=publication>
-  Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang
+  Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel, and Nico Lang.
 MMEarth: Exploring Multi-Modal Pretext Tasks For Geospatial Representation Learning.
 <em>European Conference
   on Computer Vision (ECCV)</em>, 2024
@@ -550,7 +561,7 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
   Katherine Melocik, Jesse Meyer, Scott Sinno, Eric Romero, Erin
   Glennie, Amandine Montagu, Morgane Dendoncker, and Rasmus
   Fensholt. <a href="https://www.nature.com/articles/s41586-020-2824-5">An unexpectedly large count of trees in the western Sahara
-  and Sahel</a>. <em>Nature</em>, 2020  <a
+  and Sahel</a>. <em>Nature</em> <vol>587</vol>:78-82, 2020  <a
   href="https://www.nature.com/articles/d41586-020-02830-3"
   class="sup">popular science summary</a>
 </div>
@@ -2018,10 +2029,42 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 conferences and journals</h3>
 
 <div class=publication>
+Siljia Feng, Aoyang Li, Klaus Butterbach-Bahl, Majken C. Looms, Kaiyu
+  Guan, Claire  Treat, Christian Igel, and Sheng Wang.
+Improving satellite microwave sensing of global soil moisture via radiative transfer
+process-guided machine learning. In EGU General Assembly 2025,
+  2025. </div>
+  
+<div class=publication> Lucia Gordon, Serge Belongie, Christian Igel, and Nico Lang. MMEarth-Bench: Global environmental
+  tasks for multimodal geospatial models. In BioSpace25, 2025.</div>
+  
+<div class=publication>Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang. MMEarth:
+Exploring multi-modal pretext tasks for geospatial representation learning. In
+ESA-NASA International workshop on AI Foundation Model for Earth Observation,
+  2025.
+  </div>
+
+
+
+
+<div class=publication>
 Bobby Z. S. Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida
   Vind, Flemming Bendtsen, Johan Burisch, and Bulat Ibragimov. Validating and enhancing real-time disease severity classification in ulcerative colitis: Artificial intelligence as a second opinion trigger. <em>Journal of Crohn’s and Colitis</em> <vol>18</vol>:i1163–i1164, 2024.
 </div>
-  
+
+
+
+<div class=publication>Sijia Feng, Sheng Wang, Christian Igel, and Klaus Butterbach-Bahl. Physics-informed machine learning
+with multi-source satellite data to quantify field-scale n2o emissions for climate-smart
+agriculture. In Danish Digitalization, Data Science and AI 2.0 (D3A 2.0), 2024. </div>
+<div class=publication> Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang. MMEarth:
+Exploring multi-modal pretext tasks for geospatial representation learning. In Danish
+Digitalization, Data Science and AI 2.0 (D3A 2.0), 2024. </div>
+<div class=publication> Mathias Perslev, Miki Nikolic, Lykke Kempfner, Christian Igel, and Poul Jørgen Jennum. Evaluation of the
+U-Sleep sleep staging model for patients with diverse sleep and neurodegenerative
+disorders. In Sleep Europe Congress (ESRS), 2024.  </div>
+
+
 <div class=publication>
 Erik B. Dam, Arjun Desai, Cem M. Deniz, H. Rajamohan, Ravinder
   Regatte, Claudia Iriondo, Valentina Pedoia, Sharmila Majumdar,
