--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,8 @@ Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
   Compton J. Tucker, and  Christian Igel.
   <a
     href="https://www.nature.com/articles/s44287-024-00116-8">High-resolution sensors and deep learning models for tree resource monitoring</a>.
-  <em>Nature Reviews Electrical Engineering</em> <vol>2</vol>:13-26, 2025
+  <em>Nature Reviews Electrical Engineering</em> <vol>2</vol>:13-26,
+  2025 <a href="https://rdcu.be/d0h22" class="sup">open access version</a> 
 </div>
 
 <div class=publication>
@@ -2032,15 +2033,15 @@ conferences and journals</h3>
 Siljia Feng, Aoyang Li, Klaus Butterbach-Bahl, Majken C. Looms, Kaiyu
   Guan, Claire  Treat, Christian Igel, and Sheng Wang.
 Improving satellite microwave sensing of global soil moisture via radiative transfer
-process-guided machine learning. In EGU General Assembly 2025,
+process-guided machine learning. In <em>EGU General Assembly</em>,
   2025. </div>
   
 <div class=publication> Lucia Gordon, Serge Belongie, Christian Igel, and Nico Lang. MMEarth-Bench: Global environmental
-  tasks for multimodal geospatial models. In BioSpace25, 2025.</div>
+  tasks for multimodal geospatial models. In <em>BioSpace25</em>, 2025.</div>
   
 <div class=publication>Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang. MMEarth:
 Exploring multi-modal pretext tasks for geospatial representation learning. In
-ESA-NASA International workshop on AI Foundation Model for Earth Observation,
+<em>ESA-NASA International workshop on AI Foundation Model for Earth Observation</em>,
   2025.
   </div>
 
@@ -2056,13 +2057,13 @@ Bobby Z. S. Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida
 
 <div class=publication>Sijia Feng, Sheng Wang, Christian Igel, and Klaus Butterbach-Bahl. Physics-informed machine learning
 with multi-source satellite data to quantify field-scale n2o emissions for climate-smart
-agriculture. In Danish Digitalization, Data Science and AI 2.0 (D3A 2.0), 2024. </div>
+agriculture. In <em>Danish Digitalization, Data Science and AI 2.0 (D3A 2.0)</em>, 2024. </div>
 <div class=publication> Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang. MMEarth:
-Exploring multi-modal pretext tasks for geospatial representation learning. In Danish
-Digitalization, Data Science and AI 2.0 (D3A 2.0), 2024. </div>
+Exploring multi-modal pretext tasks for geospatial representation learning. In <em>Danish
+Digitalization, Data Science and AI 2.0 (D3A 2.0)</em>, 2024. </div>
 <div class=publication> Mathias Perslev, Miki Nikolic, Lykke Kempfner, Christian Igel, and Poul Jørgen Jennum. Evaluation of the
 U-Sleep sleep staging model for patients with diverse sleep and neurodegenerative
-disorders. In Sleep Europe Congress (ESRS), 2024.  </div>
+disorders. In <em>Sleep Europe Congress (ESRS)</em>, 2024.  </div>
 
 
 <div class=publication>
