--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@ href="publications.html">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ">Google
 scholar profile</a>.
 <p>
+
+<div class=publication>
+Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
+  Ciais abd Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
+  Compton J. Tucker, and  Christian Igel.
+  <a
+    href="https://rdcu.be/d0h22">High-resolution sensors and deep learning models for tree resource monitoring</a>.
+  <em>Nature Reviews Electrical Engineering</em> <vol>2</vol>:13-26,
+  2025
+</div>
+
 <div class=publication>
        <img src="images/MinMax.png "
   align="right" style="margin: 0px 10px 10px 10px" width="250"
@@ -188,7 +199,7 @@ Yi-Shan Wu, Andrés R. Masegosa, Stephan S. Lorenzen, Christian Igel, and Yevgen
   Glennie, Amandine Montagu, Morgane Dendoncker, and Rasmus
   Fensholt.
     <a href="https://www.nature.com/articles/s41586-020-2824-5">An unexpectedly large count of trees in the western Sahara
-  and Sahel</a>. <em>Nature</em>, 2020  <a
+  and Sahel</a>. <em>Nature</em> <vol>587</vol>:78-82, 2020  <a
   href="https://www.nature.com/articles/d41586-020-02830-3"
   class="sup">popular science summary</a>  <a
   href="https://www.nature.com/articles/d41586-020-03514-8"
