--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,25 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
 
-
+<div class=publication>
+  Carsten Bøcker Pedersen, 
+Marianne Giørtz Pedersen,
+Sussie Antonsen, Emil Michael Pedersen, 
+Henriette Thisted Horsdal, 
+Jean-Christophe Debost, Preben Bo Mortensen, Liselotte Vogdrup
+  Petersen, Bjarni J. Vilhjálmsson, Jørgen Feldbæk Nielsen, 
+Jeppe Klok Due,
+Anders Søgaard, 
+Christian Igel, 
+Wesley K. Thompson,
+Chun Chieh Fan, 
+Naomi R. Wray,
+John J. McGrath, and
+Esben Agerbo.
+Absolute and Relative Risks of Mental Disorders in Families: A
+  comprehensive Danish Register-Based Study. <em>The Lancet
+  Psychiatry</em>, accepted </div>
+  
 
 <div class=publication>
 Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
