--- a/index.html
+++ b/index.html
@@ -119,14 +119,40 @@ scholar profile</a>.
 <p>
 
 <div class=publication>
+  Carsten Bøcker Pedersen, 
+Marianne Giørtz Pedersen,
+Sussie Antonsen, Emil Michael Pedersen, 
+Henriette Thisted Horsdal, 
+Jean-Christophe Debost, Preben Bo Mortensen, Liselotte Vogdrup
+  Petersen, Bjarni J. Vilhjálmsson, Jørgen Feldbæk Nielsen, 
+Jeppe Klok Due,
+Anders Søgaard, 
+Christian Igel, 
+Wesley K. Thompson,
+Chun Chieh Fan, 
+Naomi R. Wray,
+John J. McGrath, and
+Esben Agerbo.
+<a href="https://authors.elsevier.com/c/1lRRR7tf1dCftm">Absolute and Relative Risks of Mental Disorders in Families: A
+  comprehensive Danish Register-Based Study<\a>. <em>The Lancet
+  Psychiatry</em> <vol>12</vol>(8):590-599, 2025</div>
+
+<div class=publication>
 Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
-  Ciais abd Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
+  Ciais, Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
   Compton J. Tucker, and  Christian Igel.
   <a
     href="https://rdcu.be/d0h22">High-resolution sensors and deep learning models for tree resource monitoring</a>.
   <em>Nature Reviews Electrical Engineering</em> <vol>2</vol>:13-26,
   2025
 </div>
+
+<div class=publication>
+Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
+  <a href="https://cacm.acm.org/sustainability-and-computing/efficiency-is-not-enough-a-critical-perspective-of-environmentally-sustainable-ai/">Efficiency is Not Enough: A Critical Perspective of
+  Environmentally Sustainable</a>. <em>Communications of the ACM</em> <vol>68</vol>(7)62-69, 2025
+</div>
+
 
 <div class=publication>
        <img src="images/MinMax.png "
