--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,15 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
 
+
+
+
+
+
+
+<a name="y25"></a>
+
+<h4>2025</h4>
 <div class=publication>
   Carsten Bøcker Pedersen, 
 Marianne Giørtz Pedersen,
@@ -44,32 +53,14 @@ Chun Chieh Fan,
 Naomi R. Wray,
 John J. McGrath, and
 Esben Agerbo.
-Absolute and Relative Risks of Mental Disorders in Families: A
-  comprehensive Danish Register-Based Study. <em>The Lancet
-  Psychiatry</em>, accepted </div>
+<a href="https://authors.elsevier.com/c/1lRRR7tf1dCftm">Absolute and Relative Risks of Mental Disorders in Families: A
+  comprehensive Danish Register-Based Study<\a>. <em>The Lancet
+  Psychiatry</em> <vol>12</vol>(8):590-599, 2025</div>
+
   
-
-<div class=publication>
-Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
-  Efficiency is Not Enough: A Critical Perspective of
-  Environmentally Sustainable. <em>Communications of the ACM</em>, accepted
-</div>
-
-<div class=publication>
-Gustav Mark-Hansen,
-Frederik Henriques Altmann,
-Christian Igel,
-Ankit Kariryaa. Demosaicing and Neural Network Based Image Reconstruction in the Presence of Noise. <em>Scandinavian Conference on Image Analysis (SCIA)</em>, accepted
-</div>
-
-
-
-<a name="y25"></a>
-
-<h4>2025</h4>
 <div class=publication>
 Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
-  Ciais abd Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
+  Ciais, Jean-Pierre Wigneron, Fabian Gieseke, Sassan Saatchi,
   Compton J. Tucker, and  Christian Igel.
   <a
     href="https://www.nature.com/articles/s44287-024-00116-8">High-resolution sensors and deep learning models for tree resource monitoring</a>.
@@ -82,6 +73,11 @@ Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendts
 <em>American Journal of Gastroenterology</em>, 2025
 </div>
 
+<div class=publication>
+Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
+  <a href="https://cacm.acm.org/sustainability-and-computing/efficiency-is-not-enough-a-critical-perspective-of-environmentally-sustainable-ai/">Efficiency is Not Enough: A Critical Perspective of
+  Environmentally Sustainable</a>. <em>Communications of the ACM</em> <vol>68</vol>(7)62-69, 2025
+</div>
 
 <div class=publication>
 Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
@@ -89,6 +85,18 @@ Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
     Familiarity-Based Open-Set Recognition Under Adversarial Attacks.
   <em>Northern Lights Deep Learning Conference</em>, Proceedings of Machine Learning
 Research <vol>265</vol>:58-65, 2025
+</div>
+
+
+<div class=publication>
+Gustav Mark-Hansen,
+Frederik Henriques Altmann,
+Christian Igel,
+Ankit Kariryaa. Demosaicing and Neural Network Based Image
+  Reconstruction in the Presence of Noise. In Petersen, J., Dahl,
+  V. A., eds.:
+  <em>Scandinavian Conference on Image Analysis (SCIA)</em>, LNCS
+  <vol>15726</vol> Springer, 2025
 </div>
 
 <div class=publication>
@@ -463,20 +471,20 @@ Søgaard. Are Multilingual Sentiment Models Equally Right for the Right
 <div class=publication>
   Stephan Sloth Lorenzen, Christian Igel, and  Mads Nielsen.
   <a href="https://openreview.net/forum?id=kF9DZQQrU0w">Information Bottleneck: Exact Analysis of (Quantized) Neural
-  Networks</a>. In: <em>International Conference on Learning Representations
+  Networks</a>. In <em>International Conference on Learning Representations
   (ICLR)</em>, 2022
 </div> 
 
 <div class=publication>Stefan Oehmcke, Lei Li, Jaime Revenga, Thomas
   Nord-Larsen, Katerina Trepekli, Fabian Gieseke, Christian Igel. <a href="https://dl.acm.org/doi/pdf/10.1145/3557915.3561471">Deep Learning Based 3D Point Cloud Regression for Estimating Forest Biomass</a>.
-In: <em>International Conference on Advances in
+In <em>International Conference on Advances in
   Geographic Information Systems (ACM SIGSPATIAL)</em>, ACM, 2022
 </div>
 
 <div class=publication>Tianfang Zhang, Lei Li, Christian Igel, Stefan
   Oehmcke, Fabian Gieseke, and Zhenming Peng. LR-CSNet: Low-Rank Deep
   Unfolding Network for Image Compressive Sensing.
-In: <em>IEEE International Conference on Computer and Communications (ICCC)</em>, IEEE, 2022
+In <em>IEEE International Conference on Computer and Communications (ICCC)</em>, IEEE, 2022
 </div>
 
 
@@ -677,7 +685,7 @@ Cardioverter Defibrillator Patients Using Machine Learning</a>.
 <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Eugen Oancea, Ashish Mahabal, Christian
 Igel, and Tom Heskes. Bigger Buffer k-d Trees
   on Multi-Many-Core Systems.
-In: Senger H. et al., eds.:  
+In Senger H. et al., eds.:  
 <em>High Performance Computing for Computational Science (VECPAR 2018)</em>,
   LNCS <vol>11333</vol>,
   pp. 202-214,Springer-Verlag, 2019 <a href="https://bufferkdtree.readthedocs.io" class="sup">source code</a>
@@ -686,7 +694,7 @@ In: Senger H. et al., eds.:
 <div class=publication>
 Thorbjørn Louring Koch, Mathias Perslev, Christian Igel, and Sami Sebastian Brandt.
 Accurate Segmentation of Dental Panoramic Radiographs with U-Nets. 
-In: <em>IEEE International Symposium on Biomedical Imaging
+In <em>IEEE International Symposium on Biomedical Imaging
   (ISBI)</em>, pp. 15-19, IEEE Press, 2019
 </div>
 
@@ -696,7 +704,7 @@ Mauricio Orbes-Arteaga, Jorge Cardoso, Lauge Sørensen, Christian Igel,
   Sebastien Ourselin, Marc Modat, Mads Nielsen, and Akshay Pai.
   <a href="https://arxiv.org/abs/1908.07355">Knowledge distillation
   for semi-supervised domain adaptation</a>.
-  In:
+  In
 <em>Machine Learning in Clinical Neuroimaging (MLCN 2019)</em>, LNCS
   <vol>11796</vol>, pp. 68-76, 2019
 </div>
@@ -708,7 +716,7 @@ Mauricio Orbes-Arteaga, Lauge Sørensen, Jorge Cardoso, Marc Modat,
   Akshay Pai.
   PADDIT: Probabilistic Augmentation of Data using Diffeomorphic Image
   Transformation.
-   In:  <em>Medical Imaging 2019: Image Processing</em>, Proceedings
+   In  <em>Medical Imaging 2019: Image Processing</em>, Proceedings
   of SPIE <vol>10949</vol>, SPIE, 2019
 </div>
 
@@ -737,7 +745,7 @@ Mathias Perslev,
     Akshay Pai, and
     Christian Igel.
 <a href="https://arxiv.org/abs/1911.01764">One Network To Segment Them All: A General, Lightweight System for
-  Accurate 3D Medical Image Segmentation</a>. In:
+  Accurate 3D Medical Image Segmentation</a>. In
 <em>Medical Image Computing and Computer Assisted
   Intervention (MICCAI)</em>, LNCS <vol>11765</vol>, pp. 30-38, Springer, 2019 <a href="downloads.html#mpunet" class="sup">source code</a>
 </div>
@@ -1038,7 +1046,7 @@ Christian  Igel.  <a href="http://jmlr.org/proceedings/papers/v32/gieseke14.pdf"
 and Principled Methods for the Design of Metaheuristics</em>, pp. 1-23,
   Springer-Verlag, 2014 </div>
 
-<div class=publication>D&iacute;dac R. Arbon&egrave;s, Henrik G. Jensen, Annika Loft, Per Munck af Rosensch&ouml;ld, Anders Elias Hansen, Christian Igel, and Sune Darkner</a>. Automatic FDG-PET-based tumor and metastatic lymph node segmentation in cervical cancer. In:  <em>Proc. SPIE 9034,
+<div class=publication>D&iacute;dac R. Arbon&egrave;s, Henrik G. Jensen, Annika Loft, Per Munck af Rosensch&ouml;ld, Anders Elias Hansen, Christian Igel, and Sune Darkner</a>. Automatic FDG-PET-based tumor and metastatic lymph node segmentation in cervical cancer. In  <em>Proc. SPIE 9034,
   Medical Imaging 2014: Image Processing</em>, 903441, 2014</div>
 
 <div class=publication>Fabian  Gieseke,
@@ -1148,7 +1156,7 @@ Applications -->
  <div class=publication>
 Adhish Prasoon, Kersten Petersen, Christian Igel, Francois Lauze, Erik Dam, and Mads Nielsen.
 <a href ="paper/DFLoKCSUaTCNN-orig.pdf">Deep Feature Learning for Knee Cartilage Segmentation Using a Triplanar Convolutional Neural Network</a>.
-   In: <em>Medical Image Computing and Computer Assisted Intervention
+   In <em>Medical Image Computing and Computer Assisted Intervention
    (MICCAI 2013)</em>, LNCS <vol>8150</vol>, pp 246-253, Springer-Verlag, 2013
  </div>
   
@@ -1156,7 +1164,7 @@ Adhish Prasoon, Kersten Petersen, Christian Igel, Francois Lauze, Erik Dam, and 
   <a href="http://image.diku.dk/francois">Francois Lauze</a>, Erik
   Dam, and <a href="http://image.diku.dk/madsn">Mads
   Nielsen</a>. Femoral Cartilage Segmentation in Knee MRI Scans Using
-  Two Stage Voxel Classification. In: <em>35th Annual
+  Two Stage Voxel Classification. In <em>35th Annual
 International Conference of the IEEE Engineering in
 Medicine and Biology Society (EMBC)</em>, pp 5469-5472, IEEE Press, 2012 <a href="notes.html#FCSiKMRISUTSVC" class="sup">note</a></div>
 
@@ -1197,7 +1205,7 @@ Sensing, 2nd edition, pp. 37-56, CRC Press, 2012 </div>
   Christian Igel, <a
   href="http://prlab.tudelft.nl/users/marco-loog/">Marco Loog</a>, <a
   href="http://image.diku.dk/aasa">Aasa Feragen</a>, <a href="http://www.bigr.nl/website/index.html?page=people&subpage=person&id=MarleendeBruijne">Marleen de Bruijne</a>, and
-  <a href="http://image.diku.dk/madsn">Mads Nielsen</a>. Towards exaggerated emphysema stereotypes. In:  <em>SPIE
+  <a href="http://image.diku.dk/madsn">Mads Nielsen</a>. Towards exaggerated emphysema stereotypes. In  <em>SPIE
   Medical Imaging 2012: Image Processing</em>.
 Proceedings of SPIE 8315, 83150Q, 2012</div>
 
@@ -1226,7 +1234,7 @@ Progress in Pattern Recognition, Image Analysis, Computer Vision, and Applicatio
 <div class=publication> Adhish Prasoon, Christian Igel, <a href="http://prlab.tudelft.nl/users/marco-loog/">Marco Loog</a>,
   <a href="http://image.diku.dk/francois">Francois Lauze</a>, Erik Dam, and <a href="http://image.diku.dk/madsn">Mads Nielsen</a>. Cascaded classifier for
   large-scale data applied to automatic segmentation of articular
-  cartilage. In: <em>SPIE Medical Imaging 2012: Image Processing</em>. Proceedings of SPIE 8314, 83144V, 2012</div>
+  cartilage. In <em>SPIE Medical Imaging 2012: Image Processing</em>. Proceedings of SPIE 8314, 83144V, 2012</div>
 
 <a name="y11"></a>
 
@@ -1265,7 +1273,7 @@ Huge Music Archives on Mobile Devices.
 
   <div class=publication>  <a href="http://image.diku.dk/chen">Chen Chen</a>, Francois Lauze, Christian Igel,
   Aasa Feragen, Marco Loog, and Mads Nielsen. Towards exaggerated
-  image stereotypes. In: <em>Asian Conference on Pattern Recognition
+  image stereotypes. In <em>Asian Conference on Pattern Recognition
   (ACPR 2011)</em>, pp. 422-426, IEEE Press, 2011</div>
 
 <div class=publication>Asja
@@ -1376,7 +1384,7 @@ Machine Learning Reports 04/2010, pp. 33–39, 2010
 
 <div class=publication></a>Matthias Tuma, Christian Igel, and Mark Prior.
 Hydroacoustic Signal Classification Using Kernel
-Functions for Variable Feature Sets. In: <em>International Conference on
+Functions for Variable Feature Sets. In <em>International Conference on
 Pattern Recognition (ICPR 2010)</em>, 2010</div>
 
 
@@ -1396,7 +1404,7 @@ Optimization</em>, pp. 1975-1978, ACM Press, 2010</div>
 
 <div class=publication></a>Thomas Vo&szlig;,
 <a href="http://www.lri.fr/~hansen">Nikolaus Hansen</a>, and Christian Igel.
-<a href="paper/ISSAftMOCMA-org.pdf">Improved Step Size Adaptation for the MO-CMA-ES</a>. In: <em>Proceedings of the Genetic and Evolutionary Computation Conference
+<a href="paper/ISSAftMOCMA-org.pdf">Improved Step Size Adaptation for the MO-CMA-ES</a>. In <em>Proceedings of the Genetic and Evolutionary Computation Conference
 (GECCO 2010)</em>, pp. 487-494, ACM Press, 2010</div>
 
 <a name="y09"></a>
@@ -1448,13 +1456,13 @@ Uncertainty Handling CMA-ES for Reinforcement Learning. In <em>Proceedings of th
 
 
 <div class=publication>Verena Heidrich-Meisner and Christian Igel.
-<a href="https://sites.google.com/a/rl-community.org/msrl09/abstracts/Heidrich-Meisner.pdf?attredirects=0">Variable-metric Evolution Strategies for Direct Policy Search</a>. In: <em>Multidisciplinary Symposium on Reinforcement Learning (MSRL 2009)</em>,  2009
-<!-- <a href="http://7536933656460544961-a-rl--community-org-s-sites.googlegroups.com/a/rl-community.org/msrl09/abstracts/Heidrich-Meisner.pdf?attredirects=0&auth=ANoY7cphbfmLoTVoujMBrAfVM4gMzHS6x-_q1raVyJoFivUMMLjeDfZR0HiPRwkV2epzQCgY7vihQxo8yk-NBJdPYdeG7XREUs9j1SOhsj572q5DPUxUTaejIqlpr4ywoOWD7Ao6P0Tf0uDZCRMCgTOMOUnVJA1-kMoC_yjVh7d232GxHc92qb1vLt_-ttlvcT_PL8pGqsnUpowtkoX7TPuDvY2BV4WoIw%3D%3D">Variable-metric Evolution Strategies for Direct Policy Search</a>. In: <em>Multidisciplinary Symposium on Reinforcement Learning (MSRL 2009)</em>,  2009 -->
+<a href="https://sites.google.com/a/rl-community.org/msrl09/abstracts/Heidrich-Meisner.pdf?attredirects=0">Variable-metric Evolution Strategies for Direct Policy Search</a>. In <em>Multidisciplinary Symposium on Reinforcement Learning (MSRL 2009)</em>,  2009
+<!-- <a href="http://7536933656460544961-a-rl--community-org-s-sites.googlegroups.com/a/rl-community.org/msrl09/abstracts/Heidrich-Meisner.pdf?attredirects=0&auth=ANoY7cphbfmLoTVoujMBrAfVM4gMzHS6x-_q1raVyJoFivUMMLjeDfZR0HiPRwkV2epzQCgY7vihQxo8yk-NBJdPYdeG7XREUs9j1SOhsj572q5DPUxUTaejIqlpr4ywoOWD7Ao6P0Tf0uDZCRMCgTOMOUnVJA1-kMoC_yjVh7d232GxHc92qb1vLt_-ttlvcT_PL8pGqsnUpowtkoX7TPuDvY2BV4WoIw%3D%3D">Variable-metric Evolution Strategies for Direct Policy Search</a>. In <em>Multidisciplinary Symposium on Reinforcement Learning (MSRL 2009)</em>,  2009 -->
 </div>
 
 <div class=publication>Christian Igel and Tobias Glasmachers. 
 Second-order SMO for SVM Online and Active Learning.
-In: 23rd <em>European Conference on Operational Research (EURO 2009)</em>, 2009</div>
+In 23rd <em>European Conference on Operational Research (EURO 2009)</em>, 2009</div>
 
 
 <div class=publication> Valentin Markounikau, Christian Igel, and  <a href="http://homepage.ruhr-uni-bochum.de/Dirk.Jancke/">Dirk
@@ -2256,7 +2264,7 @@ for Alzheimer’s Diagnosis. Alzheimer's &amp; Dementia: The Journal of the
 
   
 <div class=publication> Asja Fischer and  Christian Igel. Bounding the Bias of Contrastive Divergence Used for
-Maximum Likelihood Learning in Restricted Boltzmann Machines. In: <em>Second Joint Statistical Meeting Deutsche
+Maximum Likelihood Learning in Restricted Boltzmann Machines. In <em>Second Joint Statistical Meeting Deutsche
  Arbeitsgemeinschaft Statistik `Statistics under one umbrella' (DAGStat 2010)</em>, p. 98, 2010
 </div>
 
@@ -2264,13 +2272,13 @@ Maximum Likelihood Learning in Restricted Boltzmann Machines. In: <em>Second Joi
 <div class=publication>Matthias Tuma and Christian Igel.
 Automatic Classification of Hydroacoustic Signals to Support
 Verification of the Comprehensive Nuclear-Test-Ban Treaty.
-In: <em>Second Joint Statistical Meeting Deutsche Arbeitsgemeinschaft Statistik `Statistics under one umbrella'
+In <em>Second Joint Statistical Meeting Deutsche Arbeitsgemeinschaft Statistik `Statistics under one umbrella'
 (DAGStat 2010)</em>, p. 361, 2010
 </div>
 
 <div class=publication>
 Valentin Markounikau, Christian Igel, and Dirk Jancke. Neural Field Models
-of Early Cortical Processing of Real and Apparent Motion. In: <em>
+of Early Cortical Processing of Real and Apparent Motion. In <em>
 Computational Vision and Neuroscience Symposium</em>, p. 36. Max Planck
 Institute for Biological Cybernetics, T&uuml;bingen, 2008</div>
 
